StackLayout: fix CI by appending imgui_stacklayout.cpp to imgui.cpp
This is a hack, we append imgui_stacklayout.cpp to imgui.cpp. I did not have time to change all the MSVC, android and other build files

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,6 +22,11 @@ jobs:
       MSBUILD_PATH: C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\MSBuild\Current\Bin\
     steps:
       - uses: actions/checkout@v3
+      - name: Append imgui_stacklayout.cpp to imgui.cpp (Windows)
+        shell: cmd
+        run: |
+          type imgui_stacklayout.cpp >> imgui.cpp
+          del imgui_stacklayout.cpp
 
       - name: Install Dependencies
         shell: powershell
@@ -210,6 +215,8 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
     - uses: actions/checkout@v3
+    - name: Append imgui_stacklayout.cpp to imgui.cpp
+      run: cat imgui_stacklayout.cpp >> imgui.cpp && rm imgui_stacklayout.cpp
 
     - name: Install Dependencies
       run: |
@@ -403,6 +410,8 @@ jobs:
     runs-on: macos-latest
     steps:
     - uses: actions/checkout@v3
+    - name: Append imgui_stacklayout.cpp to imgui.cpp
+      run: cat imgui_stacklayout.cpp >> imgui.cpp && rm imgui_stacklayout.cpp
 
     - name: Install Dependencies
       run: |
@@ -463,6 +472,8 @@ jobs:
     runs-on: macos-latest
     steps:
     - uses: actions/checkout@v3
+    - name: Append imgui_stacklayout.cpp to imgui.cpp
+      run: cat imgui_stacklayout.cpp >> imgui.cpp && rm imgui_stacklayout.cpp
 
     - name: Build example_apple_metal
       run: |
@@ -473,6 +484,8 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
     - uses: actions/checkout@v3
+    - name: Append imgui_stacklayout.cpp to imgui.cpp
+      run: cat imgui_stacklayout.cpp >> imgui.cpp && rm imgui_stacklayout.cpp
 
     - name: Install Dependencies
       run: |
@@ -500,6 +513,8 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
     - uses: actions/checkout@v3
+    - name: Append imgui_stacklayout.cpp to imgui.cpp
+      run: cat imgui_stacklayout.cpp >> imgui.cpp && rm imgui_stacklayout.cpp
 
     - name: Build example_android_opengl3
       run: |
